fixed gameselect, now starts python